Fix documentation and upgrade dependency

--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -38,7 +38,8 @@ dependencies:
     path: ../
   ffi: ^2.1.4
   bs58: ^1.0.2
-  qr_flutter: 
+  qr_flutter: ^4.0.0
+  logger: ^2.5.0
 
 dev_dependencies:
   flutter_test:
@@ -50,8 +51,6 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
-  qr_flutter: ^4.0.0
-
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
