--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -6,3 +6,7 @@ include: package:flutter_lints/flutter.yaml
 analyzer:
   errors:
     invalid_annotation_target: ignore
+
+linter:
+  rules:
+    - public_member_api_docs
